# escape

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  config.py  entities.py  inventory.py  main.py  pyproject.toml  scripts.py  setup.bat  setup.sh
.github/workflows/: black.yml  pylint.yml
assets/: __init__.py  manager.py
assets/shaders/: torch_main.glsl  torch_shadow.glsl
assets/sprites/: shadow.glsl
assets/tilemap/: level1.tmx  sprites.tsx
assets/tilemaps/: level1.tiled-session  level1.tmx  level1_.tmx  level2.tmx  levels.tiled-session  sprites.tsx  tutorial_key.tmx  tutorial_movement.tmx
game/: __main__.py  config.py  entities.py  inventory.py  myver.py  sounds.py  torch.py
game/data/: DB.json  __init__.py  encrypt.py  lock.py  unlock.py  updateDB.py  update_db.py
game/entities/: __init__.py  enemy.py  player.py
game/views/: __init__.py  about.py  game_view.py  gameover.py  inventory.py  level_selection.py  menu.py  pause_menu.py  settings.py  story.py
utils/: install_poetry.py  utils.py
